--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  video_player: ^2.9.2
+  storyview:
+    path: package/storyview
 
 dev_dependencies:
   flutter_test:
