--- a/package/storyview/pubspec.yaml
+++ b/package/storyview/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  video_player: ^2.9.2
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
