--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   cached_network_image: ^3.4.1
   video_player: ^2.9.2
+  flutter_carousel_slider: ^1.1.0
 
 dev_dependencies:
   flutter_test:
